--- a/src/Nethermind.Int256/Nethermind.Int256.csproj
+++ b/src/Nethermind.Int256/Nethermind.Int256.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Authors>Nethermind, uint256 Authors</Authors>
-    <Copyright>Demerzel Solutions Limited, uint256 Authors</Copyright>
+    <Authors>Nethermind</Authors>
+    <Copyright>Demerzel Solutions Limited</Copyright>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageId>Nethermind.Numerics.Int256</PackageId>
