--- a/.github/workflows/run-tests-nointrinsics.yml
+++ b/.github/workflows/run-tests-nointrinsics.yml
@@ -1,4 +1,4 @@
-name: '[Test] Int256'
+name: '[Test] No Intrinsics'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
@@ -13,6 +13,7 @@ on:
 
 env:
   BUILD_CONFIG: release
+  DOTNET_EnableHWIntrinsic: 0
 
 jobs:
   int256-tests:
