--- a/.github/workflows/run-tests-nointrinsics.yml
+++ b/.github/workflows/run-tests-nointrinsics.yml
@@ -12,12 +12,14 @@ on:
   workflow_dispatch:
 
 env:
-  BUILD_CONFIG: release
   DOTNET_EnableHWIntrinsic: 0
 
 jobs:
   int256-tests:
     name: 'Run Int256 tests'
+    strategy:
+      matrix:
+        BUILD_CONFIG: ["release", "debug"]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -29,4 +31,4 @@ jobs:
         dotnet-version: 7
     - name: Nethermind.Int256.Test
       run: |
-        dotnet test src/Nethermind.Int256.Test/Nethermind.Int256.Test.csproj -c ${{ env.BUILD_CONFIG }}
+        dotnet test src/Nethermind.Int256.Test/Nethermind.Int256.Test.csproj -c ${{ matrix.BUILD_CONFIG }}
