Vectorize a bunch of things (#25)
* Add test for underflow

* Throw helpers

* Faster Len & LeadingZeros

* Vectorize IsZero and IsOne

* Vectorize constructors

* Vectorize WriteUInt64LittleEndian

* Vectorize Equals

* Vectorize Xor

* Vectorize And

* Vectorize Or

* Vectorize Not

* Consolidate Subtract code

* Add no intrinsics tests

* Add debug and release

* Add tests for And, Xor, Or

* Add Not tests

--- a/.github/workflows/run-tests-nointrinsics.yml
+++ b/.github/workflows/run-tests-nointrinsics.yml
@@ -1,4 +1,4 @@
-name: '[Test] Int256'
+name: '[Test] No Intrinsics'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
@@ -10,6 +10,9 @@ on:
        - master
   pull_request:
   workflow_dispatch:
+
+env:
+  DOTNET_EnableHWIntrinsic: 0
 
 jobs:
   int256-tests:
