--- a/.github/workflows/run-tests-nointrinsics.yml
+++ b/.github/workflows/run-tests-nointrinsics.yml
@@ -1,4 +1,4 @@
-name: Test
+name: '[Test] No Intrinsics'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
@@ -11,9 +11,12 @@ on:
   pull_request:
   workflow_dispatch:
 
+env:
+  DOTNET_EnableHWIntrinsic: 0
+
 jobs:
-  test:
-    name: Test
+  int256-tests:
+    name: 'Run Int256 tests'
     strategy:
       matrix:
         BUILD_CONFIG: ["release", "debug"]
@@ -26,6 +29,6 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7
-    - name: test
+    - name: Nethermind.Int256.Test
       run: |
         dotnet test src/Nethermind.Int256.Test/Nethermind.Int256.Test.csproj -c ${{ matrix.BUILD_CONFIG }}
