Revert "Activate tests"
This reverts commit 16252b1a9650e17fe19f950b2a4d40fc942f4890.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,25 @@
 name: Test
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
-  cancel-in-progress: true
-
 on:
   push:
-    branches:
-       - master
-  pull_request:
+    paths:
+      - 'src/Nethermind.*/**'
   workflow_dispatch:
 
 jobs:
   test:
     name: Test
-    strategy:
-      matrix:
-        BUILD_CONFIG: ["release", "debug"]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      with:
-        submodules: true
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7
-    - name: test
-      run: |
-        dotnet test src/Nethermind.Int256.Test/Nethermind.Int256.Test.csproj -c ${{ matrix.BUILD_CONFIG }}
+    
+      - name: Check out repository
+        uses: actions/checkout@v3
+    
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 7
+
+      - name: Test
+        working-directory: src/Nethermind.Int256.Test
+        run: dotnet test -c release
