--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,14 @@
 name: Test
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
+
 on:
   pull_request:
+    branches: [ 'master' ]
   push:
-    paths:
-      - 'src/Nethermind.*/**'
+    branches: [ 'master' ]
   workflow_dispatch:
   
 env:
