--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,27 @@
 name: Test
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
+
 on:
   pull_request:
+    branches: [ 'master' ]
   push:
-    paths:
-      - 'src/Nethermind.*/**'
+    branches: [ 'master' ]
   workflow_dispatch:
+  
 
 jobs:
   test:
     name: Test
+    strategy:
+      matrix:
+        BUILD_CONFIG: ["release", "debug"]
+        JIT_INTRINSICS: [0, 1]
+    env:
+      DOTNET_EnableHWIntrinsic: ${{ matrix.JIT_INTRINSICS }}
+
     runs-on: ubuntu-latest
     steps:
     
@@ -23,4 +35,4 @@ jobs:
 
       - name: Test
         working-directory: src/Nethermind.Int256.Test
-        run: dotnet test -c release
+        run: dotnet test -c ${{ matrix.BUILD_CONFIG }}
