--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ concurrency:
 on:
   pull_request:
   push:
+    branches: [master]
     paths:
       - '.github/workflows/test.yml'
       - 'src/Nethermind.*/**'
