--- a/src/Nethermind.Int256.Benchmark/Nethermind.Int256.Benchmark.csproj
+++ b/src/Nethermind.Int256.Benchmark/Nethermind.Int256.Benchmark.csproj
@@ -1,17 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
-    </PropertyGroup>
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="BenchmarkDotNet" Version="0.13.4" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" />
+  </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\Nethermind.Int256.Test\Nethermind.Int256.Test.csproj" />
-      <ProjectReference Include="..\Nethermind.Int256\Nethermind.Int256.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nethermind.Int256.Test\Nethermind.Int256.Test.csproj" />
+    <ProjectReference Include="..\Nethermind.Int256\Nethermind.Int256.csproj" />
+  </ItemGroup>
 
 </Project>
