--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
     
       - name: Test
         working-directory: src/Nethermind.Int256.Test
-        run: dotnet test -c ${{ env.BUILD_CONFIG }} --no-restore
+        run: dotnet run -c ${{ env.BUILD_CONFIG }} --no-restore
 
       - name: Publish
         working-directory: src/Nethermind.Int256
