--- a/src/Nethermind.Int256.Benchmark/Nethermind.Int256.Benchmark.csproj
+++ b/src/Nethermind.Int256.Benchmark/Nethermind.Int256.Benchmark.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" />
+    <PackageReference Include="BenchmarkDotNet.Diagnostics.dotTrace" />
   </ItemGroup>
 
   <ItemGroup>
