--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -27,57 +27,56 @@ jobs:
           # debug - 3 OS
           - os: windows-latest
             build-config: debug
-            DOTNET_EnableHWIntrinsic: 1
-            DOTNET_EnableAVX2: 1
+            intrinsics: HWIntrinsics
+            avx2: Avx2
           - os: macos-latest
             build-config: debug
-            DOTNET_EnableHWIntrinsic: 1
-            DOTNET_EnableAVX2: 0
+            intrinsics: HWIntrinsics
+            avx2: NoAvx2
           - os: ubuntu-latest
             build-config: debug
-            DOTNET_EnableAVX2: 1
-            DOTNET_EnableHWIntrinsic: 1
+            avx2: NoAvx2
+            intrinsics: HWIntrinsics
             
           # windows-latest - 2 variants
           - os: windows-latest
             build-config: release
-            DOTNET_EnableHWIntrinsic: 0
-            DOTNET_EnableAVX2: 0
+            intrinsics: NoHWIntrinsics
+            avx2: NoAvx20
           - os: windows-latest
             build-config: release
-            DOTNET_EnableHWIntrinsic: 1
-            DOTNET_EnableAVX2: 1
+            intrinsics: HWIntrinsics
+            avx2: Avx2
 
           # macos-latest - 2 variants
           - os: macos-latest
             build-config: release
-            DOTNET_EnableHWIntrinsic: 0
-            DOTNET_EnableAVX2: 0
+            intrinsics: NoHWIntrinsics
+            avx2: NoAvx2
           - os: macos-latest
             build-config: release
-            DOTNET_EnableHWIntrinsic: 1
-            DOTNET_EnableAVX2: 0
+            intrinsics: HWIntrinsics
+            avx2: NoAvx2
 
 
           # ubuntu-latest - 3 variants            
           - os: ubuntu-latest
             build-config: release
-            DOTNET_EnableAVX2: 1
-            DOTNET_EnableHWIntrinsic: 1
+            avx2: Avx2
+            intrinsics: HWIntrinsics
           - os: ubuntu-latest
             build-config: release
-            DOTNET_EnableAVX2: 0
-            DOTNET_EnableHWIntrinsic: 1
+            avx2: NoAvx2
+            intrinsics: HWIntrinsics
           - os: ubuntu-latest
             build-config: release
-            DOTNET_EnableAVX2: 0
-            DOTNET_EnableHWIntrinsic: 0
+            avx2: NoAvx2
+            intrinsics: NoHWIntrinsics
             
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        build-config: [debug, release]
-        hardware-intrinsics: [0, 1]
     env:
-      DOTNET_EnableHWIntrinsic: ${{ matrix.hardware-intrinsics }}
+      DOTNET_EnableAVX2: ${{ matrix.avx2 == 'NoAvx2' && '0' || '1' }}
+      DOTNET_EnableHWIntrinsic: ${{ matrix.intrinsics == 'NoHWIntrinsics' && '0' || '1' }}
+      
     steps:
       - name: Check out repository
         uses: actions/checkout@v5
@@ -94,7 +93,7 @@ jobs:
         run: dotnet test -c ${{ matrix.build-config }} --no-restore
 
       - name: Publish
-        if: matrix.build-config == 'release' && matrix.hardware-intrinsics == 1 &&
+        if: matrix.build-config == 'release' && matrix.intrinsics == 'HWIntrinsics' && matrix.avx2  == 'Avx2' &&
           (github.event_name == 'workflow_dispatch' && github.event.inputs.publish != 'No' || github.event_name == 'release')
         working-directory: src
         run: |
