--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -12,7 +12,7 @@
   <PropertyGroup Label="ProductInfo">
     <Authors>Nethermind</Authors>
     <Copyright>Demerzel Solutions Limited</Copyright>
-    <VersionPrefix>1.3.6</VersionPrefix>
+    <VersionPrefix>1.3.6-zkvm.3</VersionPrefix>
     <VersionSuffix></VersionSuffix>
   </PropertyGroup>
 
